--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/js-cookie": "^2.2.4",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "antd": "",
+    "axios": "^0.19.2",
+    "bizcharts": "",
+    "js-cookie": "^2.2.1",
+    "mobx": "",
+    "mobx-react": "^6.1.5",
+    "mobx-react-lite": "^1.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
