--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@types/js-cookie": "^2.2.4",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "",
+    "@types/react-router": "",
     "antd": "",
     "axios": "^0.19.2",
     "bizcharts": "",
@@ -20,6 +21,8 @@
     "mobx-react-lite": "^1.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "",
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2"
   },
