--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@types/js-cookie": "^2.2.4",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
-    "@types/react-router-dom": "",
     "@types/react-router": "",
+    "@types/react-router-dom": "",
     "antd": "",
     "axios": "^0.19.2",
     "bizcharts": "",
@@ -19,6 +19,7 @@
     "mobx": "",
     "mobx-react": "^6.1.5",
     "mobx-react-lite": "^1.5.2",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
