--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-package*.json
+package-lock.json
+yarn-error.log
+yarn.lock
 # dependencies
 node_modules
 /.pnp
