--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,21 +11,21 @@
     "@types/js-cookie": "^2.2.4",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
-    "@types/react-router": "",
-    "@types/react-router-dom": "",
-    "antd": "",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "antd": "^4.3.2",
     "axios": "^0.19.2",
     "bizcharts": "",
     "js-cookie": "^2.2.1",
-    "mobx": "",
+    "mobx": "^5.15.4",
     "mobx-react": "^6.1.5",
     "mobx-react-lite": "^1.5.2",
-    "moment": "^2.24.0",
+    "moment": "^2.26.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
-    "react-router-dom": "",
-    "react-scripts": "3.3.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
