--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mobx-react": "^6.1.5",
     "mobx-react-lite": "^1.5.2",
     "moment": "^2.26.0",
+    "moment-timezone":"",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
