--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
+    "@antv/data-set": "^0.11.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -21,7 +22,7 @@
     "mobx-react": "^6.1.5",
     "mobx-react-lite": "^1.5.2",
     "moment": "^2.26.0",
-    "moment-timezone":"",
+    "moment-timezone": "",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
