--- a/package.json
+++ b/package.json
@@ -3,32 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.1",
-    "@antv/data-set": "^0.11.4",
+    "@ant-design/icons": "^4.5.0",
+    "@antv/data-set": "^0.11.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/js-cookie": "^2.2.4",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-router": "^5.1.7",
-    "@types/react-router-dom": "^5.1.5",
-    "antd": "^4.3.2",
+    "@types/node": "^12.20.0",
+    "@types/react": "^16.14.4",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
+    "antd": "^4.12.3",
     "axios": "^0.21.1",
-    "bizcharts": "",
+    "bizcharts": "^4.1.7",
     "js-cookie": "^2.2.1",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.1.5",
+    "mobx": "^5.15.7",
+    "mobx-react": "^6.3.1",
     "mobx-react-lite": "^1.5.2",
-    "moment": "^2.26.0",
-    "moment-timezone": "",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.3.0",
-    "typescript": "~3.7.2"
+    "react-scripts": "^3.4.4",
+    "typescript": "^3.9.9"
   },
   "scripts": {
     "start": "react-scripts start",
