--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "react-dom": "^16.14.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4",
-    "typescript": "^3.9.9"
+    "react-scripts": "^4.0.3",
+    "typescript": "^3.9.9",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.1"
   }
 }
